--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,7 +12,7 @@ unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
 
-bind R source-file ~/.config/dotfiles/tmux/.tmux.conf
+bind R source-file ~/DEV/dotfiles/tmux/.tmux.conf
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
@@ -52,8 +52,8 @@ bind-key x swap-pane -t :.0 \; select-pane -t :.0
 bind-key k kill-pane \;
 #bind-key k kill-pane \; select-layout main-vertical
 # bind-key v split-window -v \; select-layout main-vertical \; swap-pane -t :.0 \; select-pane -t :.0
-bind-key r run-shell "~/.config/dotfiles/tmux/scripts/resize-adaptable.sh -l main-vertical -p 61"
-bind-key R source-file ~/.config/dotfiles/tmux/tmux.conf \; display-message "Config reloaded"
+bind-key r run-shell "~/DEV/dotfiles/tmux/scripts/resize-adaptable.sh -l main-vertical -p 61"
+bind-key R source-file ~/DEV/dotfiles/tmux/tmux.conf \; display-message "Config reloaded"
 bind-key p paste-buffer
 bind-key c copy-mode
 
