--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -109,7 +109,7 @@ set -g status-right-length 150
 set-option -g status "on"
 
 # Default statusbar color
-# set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
 # Default window title colors
 set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
@@ -136,13 +136,16 @@ set-option -g status-left "\
 #[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],}  #{tmux_mode_indicator} \
 #[fg=colour241, bg=colour237]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, 🔍,}"
 
+
+
+#[fg=colour246, bg=colour237]  %b %d '%y\
+#[fg=colour109]  %H:%M \
+
 set-option -g status-right "\
 #[fg=colour214, bg=colour237] \
 #[fg=colour237, bg=colour214] #(~/dotfiles/tmux_scripts/music.sh) \
 #[fg=colour223, bg=colour237] #(~/dotfiles/tmux_scripts/uptime.sh) \
 #[fg=colour223, bg=colour237] #(~/DEV/dotfiles/tmux/scripts/ping.sh) \
-#[fg=colour246, bg=colour237]  %b %d '%y\
-#[fg=colour109]  %H:%M \
 #[fg=colour248, bg=colour239]"
 
 
