--- a/alacritty/alacritty.yaml
+++ b/alacritty/alacritty.yaml
@@ -9,7 +9,8 @@
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
 import:
-  - ~/DEV/dotfiles/alacritty/dracula.theme.yaml
+  # - ~/DEV/dotfiles/alacritty/dracula.theme.yaml
+  - ~/DEV/dotfiles/alacritty/coolnight.theme.yaml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
