--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,7 +34,7 @@ set -g base-index 1
   
 # custom configs
 set -g assume-paste-time 0
-set -g base-index 1
+# set -g base-index 1
 setw -g main-pane-width 200
 setw -g mouse off
 setw -g aggressive-resize off
@@ -45,11 +45,18 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # set -g pane-border-format "#P: #{pane_current_command}"
 
 # custom bindings
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
-bind-key j select-pane -t :.-
-bind-key x swap-pane -t :.0 \; select-pane -t :.0
-bind-key k kill-pane \;
+# bind-key H resize-pane -L 5
+# bind-key L resize-pane -R 5
+# bind-key j select-pane -t :.-
+
+bind -r j resize-pane -D 2
+bind -r k resize-pane -U 2
+bind -r l resize-pane -R 2
+bind -r h resize-pane -L 2
+
+
+bind-key x swap-pane -t :.1 \; select-pane -t :.1
+bind-key K kill-pane \;
 #bind-key k kill-pane \; select-layout main-vertical
 # bind-key v split-window -v \; select-layout main-vertical \; swap-pane -t :.0 \; select-pane -t :.0
 bind-key r run-shell "~/DEV/dotfiles/tmux/scripts/resize-adaptable.sh -l main-vertical -p 61"
@@ -99,8 +106,8 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'pb
 # set -g status-right "#[fg=yellow]%d %b %Y #[fg=green]%H:%M"
 
 # Start window and pane indices at 1.
-set -g base-index 0
-set -g pane-base-index 0
+set -g base-index 1
+set -g pane-base-index 1
 
 # Length of tmux status line
 set -g status-left-length 30
