--- a/alacritty/alacritty.yaml
+++ b/alacritty/alacritty.yaml
@@ -10,7 +10,8 @@
 # to the user's home directory starting with `~/`.
 import:
   # - ~/DEV/dotfiles/alacritty/dracula.theme.yaml
-  - ~/DEV/dotfiles/alacritty/coolnight.theme.yaml
+  # - ~/DEV/dotfiles/alacritty/coolnight.theme.yaml
+  - ~/DEV/dotfiles/alacritty/tokyo-night.theme.yaml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
